1.0.5, adhesión de tests unitarios